[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyHere"
version = "00.00.03"
authors = [
  { name="Hans Elliott", email="hanselliott61@gmail.com" },
]
description = "Simplify filepath management in python projects."
readme = "README.md"
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hans-elliott99/pyHere"
"Bug Tracker" = "https://github.com/hans-elliott99/pyHere/issues"
